[gd_scene load_steps=5 format=3 uid="uid://dm3hkvfawh3kq"]

[ext_resource type="Script" uid="uid://bosrk0n764ukp" path="res://scripts/achievements/achievements_menu.gd" id="1_0iyta"]
[ext_resource type="PackedScene" uid="uid://e8y2spmxgfec" path="res://scenes/ui/close_button.tscn" id="2_4n8i0"]
[ext_resource type="Texture2D" uid="uid://bxy2weuuiacwj" path="res://assets/achievements/base_mono.png" id="4_cbhgm"]
[ext_resource type="Texture2D" uid="uid://thre1e3yyysq" path="res://assets/achievements/unknown.png" id="5_8nfpg"]

[node name="AchievementsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0iyta")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -142.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Achievements!"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(280, 250)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="AchievementsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" parent="Panel" instance=ExtResource("2_4n8i0")]
layout_mode = 1

[node name="AchievementPanel" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(260, 55)
layout_mode = 2
anchors_preset = 0
offset_left = 186.0
offset_top = 70.0
offset_right = 446.0
offset_bottom = 125.0
size_flags_horizontal = 4

[node name="Panel" type="Panel" parent="AchievementPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AchievementPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -26.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="Labels" type="HBoxContainer" parent="AchievementPanel/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Label" parent="AchievementPanel/VBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = " "

[node name="Title" type="Label" parent="AchievementPanel/VBoxContainer/Labels"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "???"

[node name="HBoxContainer" type="HBoxContainer" parent="AchievementPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Sprites" type="CenterContainer" parent="AchievementPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Base" type="TextureRect" parent="AchievementPanel/VBoxContainer/HBoxContainer/Sprites"]
layout_mode = 2
texture = ExtResource("4_cbhgm")
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="AchievementPanel/VBoxContainer/HBoxContainer/Sprites"]
layout_mode = 2
texture = ExtResource("5_8nfpg")
stretch_mode = 3

[node name="Requirement" type="Label" parent="AchievementPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Win your first game "
autowrap_mode = 2

[node name="Padding" type="Control" parent="AchievementPanel/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Panel/CloseButton" to="." method="_on_close_button_pressed"]
